Prevent link text from wrapping

--- a/_sass/_link.sass
+++ b/_sass/_link.sass
@@ -2,6 +2,7 @@
   border-bottom: 2px solid transparent
   color: $ruby
   transition: border .125s, color .125s
+  white-space: nowrap
 
   &.is-active,
   &:hover,
@@ -11,8 +12,8 @@
 
 .link-muted
   border-bottom: 0
-  color: $black
+  color: $grey
 
   &:hover,
   &:focus
-    color: $grey
+    color: $black
